Fix horizontal scrollbar appearing in entity properties tab on OSX

--- a/examples/html/edit-style.css
+++ b/examples/html/edit-style.css
@@ -76,8 +76,10 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
 
+    overflow-x: hidden;
+    overflow-y: auto;
+}
 
 table {
     font-family: FiraSans-SemiBold;
